--- a/ml/eda.ipynb
+++ b/ml/eda.ipynb
@@ -541,6 +541,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.040378863409770746"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "trues = [0] * 300 + [1, 2, 3]\n",
+    "preds = [0] * 303\n",
+    "\n",
+    "def f1(trues, preds):\n",
+    "    weights = {\n",
+    "        1: 1,\n",
+    "        2: 2,\n",
+    "        3: 2,\n",
+    "        0: 0.003\n",
+    "    }\n",
+    "    samples_weight = []\n",
+    "    for t in trues:\n",
+    "        samples_weight.append(weights[t])\n",
+    "\n",
+    "    score = f1_score(trues, preds, sample_weight=samples_weight, average=\"weighted\")\n",
+    "    return score\n",
+    "\n",
+    "f1(trues, preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
