--- a/ml/train_hf.ipynb
+++ b/ml/train_hf.ipynb
@@ -11,7 +11,7 @@
     "from transformers import DataCollatorForTokenClassification\n",
     "from transformers import AutoModelForTokenClassification, TrainingArguments, Trainer\n",
     "import ast\n",
-    "import evaluate\n",
+    "# import evaluate\n",
     "import numpy as np\n",
     "from sklearn.metrics import f1_score"
    ]
@@ -32,43 +32,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28aebeab9aff4c27a1a9ad5ef47284bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/423 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2138a2e1b571413c8b1bd8df87367e02",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/75 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = load_dataset(\"csv\", data_files=\"data/train.csv\")[\"train\"]\n",
     "dataset = dataset.remove_columns(\"processed_text\")\n",
     "dataset = dataset.remove_columns(\"target_labels_positions\")\n",
     "dataset = dataset.remove_columns(\"label\")\n",
     "dataset = dataset.remove_columns(\"strat\")\n",
-    "dataset = dataset.train_test_split(test_size=0.15)\n",
+    "dataset = dataset.train_test_split(test_size=0.15, seed=42)\n",
     "dataset = dataset.rename_column(\"label_ids\", \"ner_tags\")\n",
     "dataset = dataset.rename_column(\"processed_text_split\", \"tokens\")\n",
     "dataset = dataset.map(add_ast)"
@@ -110,6 +81,7 @@
    "outputs": [],
    "source": [
     "model_name = \"ai-forever/sbert_large_mt_nlu_ru\"\n",
+    "output_dir = \"baseline_ai-forever-sbert_large_mt_nlu_ru_v2\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)"
    ]
   },
@@ -117,36 +89,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93d9f1bd93e948c891d70b478a8aa5f4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/423 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd67f0c129534ad284ab30e13906dbd8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/75 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def tokenize_and_align_labels(examples):\n",
     "    tokenized_inputs = tokenizer(examples[\"tokens\"], truncation=True, is_split_into_words=True)\n",
@@ -187,15 +130,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqeval = evaluate.load(\"seqeval\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "label2id = {\n",
     "    \"O\": 0,\n",
     "    \"B-discount\": 1,\n",
@@ -212,60 +146,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f1(trues, preds):\n",
-    "    weights = {\n",
-    "        1: 1,\n",
-    "        2: 2,\n",
-    "        3: 2,\n",
-    "        0: 0\n",
-    "    }\n",
-    "    samples_weight = []\n",
-    "    for t in trues:\n",
-    "        samples_weight.append(weights[t])\n",
+    "from sklearn.metrics import precision_recall_fscore_support\n",
     "\n",
-    "    score = f1_score(trues, preds, sample_weight=samples_weight, average=\"weighted\")\n",
-    "    return score\n",
+    "def weighted_f1(y_true, y_pred, weights):\n",
+    "    \"\"\"Расчет взвешенной F1 меры с индивидуальными весами для классов.\"\"\"\n",
     "\n",
-    "def compute_metrics(p):\n",
-    "    predictions, labels = p\n",
-    "    # print(len(labels))\n",
-    "    predictions = np.argmax(predictions, axis=2)\n",
+    "    y_true_flat = []\n",
+    "    y_pred_flat = []\n",
     "\n",
-    "    true_labels = []\n",
-    "    true_predictions = []\n",
-    "\n",
-    "    for prediction, label in zip(predictions, labels):\n",
+    "    for prediction, label in zip(y_pred, y_true):\n",
     "        for pr, le in zip(prediction, label):\n",
     "            if le == -100:\n",
     "                continue\n",
     "            else:\n",
-    "                true_labels.append(le)\n",
-    "                true_predictions.append(pr)\n",
+    "                y_true_flat.append(le)\n",
+    "                y_pred_flat.append(pr)\n",
     "\n",
-    "    # true_predictions = [\n",
-    "    #     [p for (p, l) in zip(prediction, label) if l != -100]\n",
-    "    #     for prediction, label in zip(predictions, labels)\n",
-    "    # ]\n",
-    "    # true_labels = [\n",
-    "    #     [l for (p, l) in zip(prediction, label) if l != -100]\n",
-    "    #     for prediction, label in zip(predictions, labels)\n",
-    "    # ]\n",
-    "    # print(len(true_predictions), len(true_labels))\n",
-    "    # print(true_labels)\n",
+    "    # рассчитываем F1 для всех классов\n",
+    "    _, _, f1, support = precision_recall_fscore_support(y_true_flat, y_pred_flat, average=None,\n",
+    "                                                                     labels=list(weights.keys()))\n",
     "\n",
-    "    results = f1(true_labels, true_predictions)\n",
+    "    # вычисление взвешенной F-меры\n",
+    "    weighted_f1 = np.sum(f1 * [weights[label] for label in np.unique(y_true_flat + y_pred_flat)] * support) / np.sum(\n",
+    "        support * [weights[label] for label in np.unique(y_true_flat + y_pred_flat)])\n",
+    "    return weighted_f1\n",
+    "\n",
+    "def compute_metrics(p):\n",
+    "    predictions, labels = p\n",
+    "    predictions = np.argmax(predictions, axis=2)\n",
+    "\n",
+    "    class_weights = {\n",
+    "            1: 1,\n",
+    "            2: 2,\n",
+    "            3: 2,\n",
+    "            0: 0\n",
+    "        }\n",
+    "\n",
+    "    weighted_f1_score = weighted_f1(labels, predictions, class_weights)\n",
+    "\n",
     "    return {\n",
-    "        \"f1\": results,\n",
+    "        \"f1\": weighted_f1_score,\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -285,18 +215,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cb387898ba441638552c03b245e7153",
+       "model_id": "91df8c410e9942ab80e9ce7804830885",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/270 [00:00<?, ?it/s]"
+       "  0%|          | 0/530 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -305,12 +235,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9080950b6fb7405491b0f9a49b7a1310",
+       "model_id": "99ca120aeff34bc181d572b169066b97",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -320,18 +250,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.022394193336367607, 'eval_f1': 0.6058950782254452, 'eval_runtime': 1.6029, 'eval_samples_per_second': 46.791, 'eval_steps_per_second': 3.119, 'epoch': 1.0}\n"
+      "{'eval_loss': 0.019432175904512405, 'eval_f1': 0.9937436839649448, 'eval_runtime': 1.6049, 'eval_samples_per_second': 46.731, 'eval_steps_per_second': 6.231, 'epoch': 1.0}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf8e47b316244664a410acf82775c9c6",
+       "model_id": "9aae80ef85ce4b64928803e5dd867e79",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -341,18 +271,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.015408470295369625, 'eval_f1': 0.8780529972977766, 'eval_runtime': 1.6681, 'eval_samples_per_second': 44.962, 'eval_steps_per_second': 2.997, 'epoch': 2.0}\n"
+      "{'eval_loss': 0.01454983837902546, 'eval_f1': 0.9955436337784025, 'eval_runtime': 1.4435, 'eval_samples_per_second': 51.958, 'eval_steps_per_second': 6.928, 'epoch': 2.0}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ad6a5d8c42348c7923c403bdfa5bee7",
+       "model_id": "c61db59bed4c42108554b35908275a9a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -362,18 +292,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.014678948558866978, 'eval_f1': 0.9032343868851236, 'eval_runtime': 1.6233, 'eval_samples_per_second': 46.203, 'eval_steps_per_second': 3.08, 'epoch': 3.0}\n"
+      "{'eval_loss': 0.013076773844659328, 'eval_f1': 0.9964641339285212, 'eval_runtime': 1.6476, 'eval_samples_per_second': 45.521, 'eval_steps_per_second': 6.069, 'epoch': 3.0}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43e20541baf84c4896cf167d9eb2a3cf",
+       "model_id": "50311139f1484b83ab08984ca42513a3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -383,18 +313,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.015517398715019226, 'eval_f1': 0.9082228032730467, 'eval_runtime': 1.6472, 'eval_samples_per_second': 45.533, 'eval_steps_per_second': 3.036, 'epoch': 4.0}\n"
+      "{'eval_loss': 0.014544963836669922, 'eval_f1': 0.9966027706646867, 'eval_runtime': 1.6193, 'eval_samples_per_second': 46.316, 'eval_steps_per_second': 6.175, 'epoch': 4.0}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad4ebbecdd2f48f08fd5f1f1896891e1",
+       "model_id": "5eefed70eabc4249aa6abd6ec7568178",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -404,16 +334,133 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.015750650316476822, 'eval_f1': 0.8796184390790539, 'eval_runtime': 1.6049, 'eval_samples_per_second': 46.73, 'eval_steps_per_second': 3.115, 'epoch': 5.0}\n"
+      "{'eval_loss': 0.014852426946163177, 'eval_f1': 0.9966573178086795, 'eval_runtime': 1.6134, 'eval_samples_per_second': 46.486, 'eval_steps_per_second': 6.198, 'epoch': 5.0}\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9ac58f3be4a4758b47cf6d9195f0c20",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.016773777082562447, 'eval_f1': 0.9966475517719255, 'eval_runtime': 1.6365, 'eval_samples_per_second': 45.83, 'eval_steps_per_second': 6.111, 'epoch': 6.0}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1741730479b8471a89ffefc6801830da",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.018464187160134315, 'eval_f1': 0.9965485264843058, 'eval_runtime': 1.6372, 'eval_samples_per_second': 45.809, 'eval_steps_per_second': 6.108, 'epoch': 7.0}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bbbbf2517b9e468690e2ac61b2af1b21",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.01902492716908455, 'eval_f1': 0.996792208239845, 'eval_runtime': 1.6453, 'eval_samples_per_second': 45.584, 'eval_steps_per_second': 6.078, 'epoch': 8.0}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f85b944b72447eeb3ae00c591427fdc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.019655821844935417, 'eval_f1': 0.9965762074408555, 'eval_runtime': 1.6197, 'eval_samples_per_second': 46.305, 'eval_steps_per_second': 6.174, 'epoch': 9.0}\n",
+      "{'loss': 0.0134, 'grad_norm': 0.11675046384334564, 'learning_rate': 1.1320754716981133e-06, 'epoch': 9.43}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e27f919ac7f247d8a53856b902cbeb4d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.01983506791293621, 'eval_f1': 0.9968583886315955, 'eval_runtime': 1.642, 'eval_samples_per_second': 45.676, 'eval_steps_per_second': 6.09, 'epoch': 10.0}\n",
+      "{'train_runtime': 351.0664, 'train_samples_per_second': 12.049, 'train_steps_per_second': 1.51, 'train_loss': 0.012717333991291388, 'epoch': 10.0}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=530, training_loss=0.012717333991291388, metrics={'train_runtime': 351.0664, 'train_samples_per_second': 12.049, 'train_steps_per_second': 1.51, 'total_flos': 3816559961389224.0, 'train_loss': 0.012717333991291388, 'epoch': 10.0})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "training_args = TrainingArguments(\n",
-    "    output_dir=\"baseline_sbert\",\n",
+    "    output_dir=output_dir,\n",
     "    learning_rate=2e-5,\n",
-    "    per_device_train_batch_size=16,\n",
-    "    per_device_eval_batch_size=16,\n",
+    "    per_device_train_batch_size=8,\n",
+    "    per_device_eval_batch_size=8,\n",
     "    num_train_epochs=10,\n",
     "    weight_decay=0.01,\n",
     "    eval_strategy=\"epoch\",\n",
@@ -433,6 +480,17 @@
     ")\n",
     "\n",
     "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "trainer.save_model(os.path.join(output_dir, \"final\"))"
    ]
   },
   {
