--- a/ml/eda.ipynb
+++ b/ml/eda.ipynb
@@ -275,9 +275,10 @@
    "source": [
     "import ast\n",
     "\n",
+    "\n",
     "def get_labels(row):\n",
     "    label = [\"O\"] * len(row.processed_text.split())\n",
-    "    \n",
+    "\n",
     "    if row.target_labels_positions == {}:\n",
     "        return str(label)\n",
     "    else:\n",
@@ -563,6 +564,7 @@
     "trues = [0] * 300 + [1, 2, 3]\n",
     "preds = [0] * 303\n",
     "\n",
+    "\n",
     "def f1(trues, preds):\n",
     "    weights = {\n",
     "        1: 1,\n",
@@ -574,8 +576,10 @@
     "    for t in trues:\n",
     "        samples_weight.append(weights[t])\n",
     "\n",
-    "    score = f1_score(trues, preds, sample_weight=samples_weight, average=\"weighted\")\n",
+    "    score = f1_score(\n",
+    "        trues, preds, sample_weight=samples_weight, average=\"weighted\")\n",
     "    return score\n",
+    "\n",
     "\n",
     "f1(trues, preds)"
    ]
