--- a/ml/inference.ipynb
+++ b/ml/inference.ipynb
@@ -18,8 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"baseline_ai-forever-sbert_large_mt_nlu_ru_v2/checkpoint-530\")\n",
-    "model = AutoModelForTokenClassification.from_pretrained(\"baseline_ai-forever-sbert_large_mt_nlu_ru_v2/checkpoint-530\")"
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    \"baseline_ai-forever-sbert_large_mt_nlu_ru_v2/checkpoint-530\")\n",
+    "model = AutoModelForTokenClassification.from_pretrained(\n",
+    "    \"baseline_ai-forever-sbert_large_mt_nlu_ru_v2/checkpoint-530\")"
    ]
   },
   {
@@ -30,19 +32,23 @@
    "source": [
     "import re\n",
     "\n",
+    "\n",
     "def most_frequent(List):\n",
-    "    return max(set(List), key = List.count)\n",
+    "    return max(set(List), key=List.count)\n",
+    "\n",
     "\n",
     "def predict(text):\n",
     "    text_len = len(text.split())\n",
-    "    inputs = tokenizer(text, return_tensors=\"pt\", max_length=512, truncation=True)\n",
+    "    inputs = tokenizer(text, return_tensors=\"pt\",\n",
+    "                       max_length=512, truncation=True)\n",
     "    tokens = tokenizer.convert_ids_to_tokens(inputs[\"input_ids\"][0])\n",
     "    tokens = tokens[1:-1]\n",
-    "    \n",
+    "\n",
     "    with torch.no_grad():\n",
     "        logits = model(**inputs).logits\n",
     "    predictions = torch.argmax(logits, dim=2)\n",
-    "    predicted_token_class = [model.config.id2label[t.item()] for t in predictions[0]]\n",
+    "    predicted_token_class = [model.config.id2label[t.item()]\n",
+    "                             for t in predictions[0]]\n",
     "    predicted_token_class = predicted_token_class[1:-1]\n",
     "\n",
     "    convert_labels = []\n",
@@ -54,7 +60,7 @@
     "\n",
     "    convert_labels = [most_frequent(el) for el in convert_labels]\n",
     "    convert_labels = convert_labels + [\"O\"] * (text_len - len(convert_labels))\n",
-    "    \n",
+    "\n",
     "    return convert_labels"
    ]
   },
