--- a/ml/train_hf.ipynb
+++ b/ml/train_hf.ipynb
@@ -92,17 +92,20 @@
    "outputs": [],
    "source": [
     "def tokenize_and_align_labels(examples):\n",
-    "    tokenized_inputs = tokenizer(examples[\"tokens\"], truncation=True, is_split_into_words=True)\n",
+    "    tokenized_inputs = tokenizer(\n",
+    "        examples[\"tokens\"], truncation=True, is_split_into_words=True)\n",
     "\n",
     "    labels = []\n",
     "    for i, label in enumerate(examples[f\"ner_tags\"]):\n",
-    "        word_ids = tokenized_inputs.word_ids(batch_index=i)  # Map tokens to their respective word.\n",
+    "        # Map tokens to their respective word.\n",
+    "        word_ids = tokenized_inputs.word_ids(batch_index=i)\n",
     "        previous_word_idx = None\n",
     "        label_ids = []\n",
     "        for word_idx in word_ids:  # Set the special tokens to -100.\n",
     "            if word_idx is None:\n",
     "                label_ids.append(-100)\n",
-    "            elif word_idx != previous_word_idx:  # Only label the first token of a given word.\n",
+    "            # Only label the first token of a given word.\n",
+    "            elif word_idx != previous_word_idx:\n",
     "                label_ids.append(label[word_idx])\n",
     "            else:\n",
     "                label_ids.append(-100)\n",
@@ -111,6 +114,7 @@
     "\n",
     "    tokenized_inputs[\"labels\"] = labels\n",
     "    return tokenized_inputs\n",
+    "\n",
     "\n",
     "tokenized_dataset = dataset.map(tokenize_and_align_labels, batched=True)"
    ]
@@ -152,6 +156,7 @@
    "source": [
     "from sklearn.metrics import precision_recall_fscore_support\n",
     "\n",
+    "\n",
     "def weighted_f1(y_true, y_pred, weights):\n",
     "    \"\"\"Расчет взвешенной F1 меры с индивидуальными весами для классов.\"\"\"\n",
     "\n",
@@ -168,23 +173,24 @@
     "\n",
     "    # рассчитываем F1 для всех классов\n",
     "    _, _, f1, support = precision_recall_fscore_support(y_true_flat, y_pred_flat, average=None,\n",
-    "                                                                     labels=list(weights.keys()))\n",
+    "                                                        labels=list(weights.keys()))\n",
     "\n",
     "    # вычисление взвешенной F-меры\n",
     "    weighted_f1 = np.sum(f1 * [weights[label] for label in np.unique(y_true_flat + y_pred_flat)] * support) / np.sum(\n",
     "        support * [weights[label] for label in np.unique(y_true_flat + y_pred_flat)])\n",
     "    return weighted_f1\n",
     "\n",
+    "\n",
     "def compute_metrics(p):\n",
     "    predictions, labels = p\n",
     "    predictions = np.argmax(predictions, axis=2)\n",
     "\n",
     "    class_weights = {\n",
-    "            1: 1,\n",
-    "            2: 2,\n",
-    "            3: 2,\n",
-    "            0: 0\n",
-    "        }\n",
+    "        1: 1,\n",
+    "        2: 2,\n",
+    "        3: 2,\n",
+    "        0: 0\n",
+    "    }\n",
     "\n",
     "    weighted_f1_score = weighted_f1(labels, predictions, class_weights)\n",
     "\n",
